removed legacy scripts and styles, fixed an overflow issue, added three open source projects, added open source styles

--- a/source/css/site/_base.scss
+++ b/source/css/site/_base.scss
@@ -11,7 +11,8 @@ html {
 }
 
 body {
-  position: relative;
+  overflow-y: scroll;
+  position: static;
   z-index: 1;
 }
 
